--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
 		"@types/node": "^16.18.76",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
+		"@types/react-syntax-highlighter": "^15.5.11",
 		"framer-motion": "^11.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-markdown": "^9.0.1",
 		"react-scripts": "5.0.1",
+		"react-syntax-highlighter": "^15.5.0",
 		"sass": "^1.70.0",
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
