--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
 		"@types/react-syntax-highlighter": "^15.5.11",
+		"axios": "^1.6.7",
 		"framer-motion": "^11.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
