--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
 		"@types/react-syntax-highlighter": "^15.5.11",
+		"@types/uuid": "^9.0.8",
 		"axios": "^1.6.7",
 		"framer-motion": "^11.0.3",
 		"react": "^18.2.0",
@@ -17,6 +18,7 @@
 		"react-syntax-highlighter": "^15.5.0",
 		"sass": "^1.70.0",
 		"typescript": "^4.9.5",
+		"uuid": "^9.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
